@@ -4,6 +4,7 @@ pisi (0.5.1-0ubuntu1) karmic; urgency=low
   * task 4: Polishing - apply detailed progress on google modules
   * task 36: apply changes from dbus interface for SIM card limitations
   * task 27: opimd changes to be applied to PISI
+  * task 3: config file location and handling (tidied up some config mechanismes)
 
  -- Michael Pilgermann <kichkasch@gmx.de>  Thu, 04 Feb 2010 19:07:36 +0100
  
